--- a/ProjectUnreal/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/ProjectUnreal/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -1,4 +1,5 @@
 [/Script/UnrealEd.LevelEditorPlaySettings]
+LastExecutedPlayModeType=PlayMode_Simulate
 LaptopScreenResolutions=(Description="Apple MacBook Air 11",Width=1366,Height=768,AspectRatio="16:9",bCanSwapAspectRatio=False,ProfileName="")
 LaptopScreenResolutions=(Description="Apple MacBook Air 13\"",Width=1440,Height=900,AspectRatio="16:10",bCanSwapAspectRatio=False,ProfileName="")
 LaptopScreenResolutions=(Description="Apple MacBook Pro 13\"",Width=1280,Height=800,AspectRatio="16:10",bCanSwapAspectRatio=False,ProfileName="")
@@ -69,6 +70,9 @@ PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 MRUItem0=/Game/Maps/Level1
 MRUItem1=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
 
+[DetailCustomWidgetExpansion]
+LandscapeEditorObject=LandscapeEditorObject.Target Layers.TargetLayers,
+
 [ContentBrowser]
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
@@ -98,6 +102,11 @@ BP_Sky_Sphere_C.Rendering=True
 BP_Sky_Sphere_C.Replication=True
 BP_Sky_Sphere_C.Input=True
 BP_Sky_Sphere_C.Actor=True
+LandscapeEditorObject.New Landscape=True
+LandscapeEditorObject.LandscapeEditor=True
+LandscapeEditorObject.Brush Settings=True
+LandscapeEditorObject.Tool Settings=True
+LandscapeEditorObject.Target Layers=True
 
 [PlacementMode]
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
