--- a/ProjectUnreal/Saved/Config/Windows/Engine.ini
+++ b/ProjectUnreal/Saved/Config/Windows/Engine.ini
@@ -36,15 +36,15 @@ JavaPath=(Path="")
 [MagicLeapSettings]
 WindowMirrorMode=1
 
-[WindowsApplication.Accessibility]
-StickyKeysHotkey=False
-ToggleKeysHotkey=False
-FilterKeysHotkey=False
-StickyKeysConfirmation=False
-ToggleKeysConfirmation=False
-FilterKeysConfirmation=False
-
 [/Script/UnrealEd.EditorEngine]
 FlipNormalMapGreenChannel=False
+
+[WindowsApplication.Accessibility]
+StickyKeysHotkey=True
+ToggleKeysHotkey=True
+FilterKeysHotkey=True
+StickyKeysConfirmation=True
+ToggleKeysConfirmation=True
+FilterKeysConfirmation=True
 
 
